--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.jpa.show-sql= true
 spring.h2.console.enabled= true
 server.error.include-stacktrace= never
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+info.greet= Good Morning
+spring.boot.admin.client.url=http://localhost:9080
+#using the metadata
+spring.boot.admin.client.instance.metadata.tags.environment=dev
