Micrometer - First Commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ info.greet= Good Morning
 spring.boot.admin.client.url=http://localhost:9080
 #using the metadata
 spring.boot.admin.client.instance.metadata.tags.environment=dev
+management.metrics.export.jmx.enabled=true
+management.metrics.export.appoptics.api-token=Yg4aeUNyZThP4_kWtazsn1tJhIV66z4KRSYpjclaEDw62uB-_GMFkHZHDGOjWkokCtAUYWk
