--- a/pom.xml
+++ b/pom.xml
@@ -110,9 +110,23 @@
 			<artifactId>spring-boot-admin-starter-client</artifactId>
 			<version>2.2.2</version>
 		</dependency>
+
+
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-core</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-jmx</artifactId>
+			<version>1.2.0</version>
+		</dependency>
+		
+		<dependency>
+		  <groupId>io.micrometer</groupId>
+		  <artifactId>micrometer-registry-appoptics</artifactId>
+		  <version>1.2.0</version>
 		</dependency>
 
 	</dependencies>
